# orchestra-core

./: .gitignore  README.md  alembic.ini  pyproject.toml
.cursor/rules/global-rules/: repo-orchestra-core.mdc  repo-orchestra.mdc
.github/workflows/: tests.yml
orchestra_core/: __main__.py  settings.py
orchestra_core/db/: base.py  dependencies.py  utils.py
orchestra_core/db/dao/: context_dao.py  embedding_dao.py  field_type_dao.py  log_event_dao.py  project_dao.py  sibling_context_cleanup.py  unique_constraint_dao.py
orchestra_core/db/migrations/: env.py
orchestra_core/db/migrations/versions/: 0001_core_initial.py  0002_kernel_drift_fixes.py
orchestra_core/db/models/: __init__.py  core_models.py
orchestra_core/lib/: debug.py  parallel.py  time.py
orchestra_core/observability/: file_trace_exporter.py  filtering_span_processor.py  inactivity_shutdown.py  observability.py  otel_setup.py  prometheus_middleware.py  request_trace_middleware.py
orchestra_core/services/: local_bucket_service.py
orchestra_core/tests/: conftest.py  test_crud_round_trip.py  test_health_and_auth.py
orchestra_core/web/: application.py  lifetime.py
orchestra_core/web/api/: dependencies.py  router.py
orchestra_core/web/api/context/: __init__.py  schema.py  views.py
orchestra_core/web/api/local_stubs/: __init__.py  views.py
orchestra_core/web/api/log/: __init__.py  schema.py  views.py
orchestra_core/web/api/project/: __init__.py  schema.py  views.py
orchestra_core/web/api/storage/: __init__.py  schema.py  views.py
orchestra_core/web/api/utils/: helpers.py  http_responses.py
orchestra_core/workers/: __init__.py
scripts/: local.sh
